<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="amount_hint">Enter total amount</string>
    <string name="buttonTen">10%</string>
    <string name="buttonFifteen">15%</string>
    <string name="buttonTwenty">20%</string>
    <string name="FifteenPercent">15%</string>
    <string name="onClickCompute">onClickCompute</string>

</resources>
