<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTenPercent"
        android:layout_below="@+id/buttonTenPercent"
        android:layout_marginTop="75dp" />

    <Button
        android:id="@+id/buttonTenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etAmount"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="59dp"
        android:onClick="@string/onClickCompute"
        android:text="@string/buttonTen" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/amount_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonFifteenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonTenPercent"
        android:layout_toRightOf="@+id/buttonTenPercent"
        android:onClick="@string/onClickCompute"
        android:text="@string/FifteenPercent" />

    <Button
        android:id="@+id/buttonTwentyPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTipAmount"
        android:layout_toRightOf="@+id/buttonFifteenPercent"
        android:onClick="@string/onClickCompute"
        android:text="@string/buttonTwenty" />

</RelativeLayout>
